# rediff

./: .gitignore  Cargo.toml
src/: core_sequences.rs  diff.rs  display.rs  lib.rs  path.rs  report.rs  same.rs  sequences.rs  symbols.rs  theme.rs  tracing_macros.rs  types.rs
src/layout/: arena.rs  attrs.rs  backend.rs  build.rs  flavor.rs  mod.rs  node.rs  render.rs
