[package]
name = "rediff"
version = "1.0.0"
edition = "2024"
rust-version = "1.90.0"
authors = ["Amos Wenger <amos@bearcove.eu>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/bearcove/rediff"
description = "Diff and compare Facet values with detailed structural difference reporting"
documentation = "https://docs.rs/rediff"
keywords = ["diff", "compare", "testing", "facet", "assertion"]
categories = ["development-tools::testing", "rust-patterns"]
homepage = "https://github.com/bearcove/rediff"

[features]
default = []
tracing = ["dep:tracing"]

[dependencies]
# Core facet dependencies
facet = "0.43"
facet-core = "0.43"
facet-pretty = "0.43"
facet-reflect = "0.43"

# From facet-diff-core
confusables = "0.1"
indextree = "4"
owo-colors = "4"
palette = { version = "0.7", default-features = false, features = ["std"] }
unicode-width = "0.2"

# From facet-diff
log = "0.4"
tracing = { version = "0.1", optional = true }

[dev-dependencies]
facet = { version = "0.43", features = ["all-impls"] }
facet-value = "0.43"
insta = "1"
tracing = "0.1"
